@@ -163,11 +163,12 @@ $(PRINTDIR)/$(PRINTTEX): \
 	    $<
 	mv $(PRINTTEX) $(PRINTDIR)/
 
-# Process the TeX file to PDF, in the print directory.  TEXPSHEADERS
-# must be set to the DocBook source directory so that TeX can find the
-# image files referenced in the document.  
+# Process the TeX file to PDF, in the print directory.  TEXINPUTS and
+# TEXPSHEADERS (for older, broken pdfLaTeX versions) must be set to
+# the DocBook source directory so that TeX can find the image files
+# referenced in the document.
 $(PRINTDIR)/$(PRINTPDF): \
 		$(PRINTDIR)/$(PRINTTEX)
 	cd $(PRINTDIR) \
-	    && TEXPSHEADERS=..: pdfjadetex $(PRINTTEX) 
+	    && TEXINPUTS=..: TEXPSHEADERS=..: pdfjadetex $(PRINTTEX) 
 
